apps/openwebui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.cherkaoui.ch`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: openwebui
          port: http
  tls:
    certResolver: letsencrypt
